--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,7 @@ bld/
 [Ll]ogs/
 AVSyc/AVSyc.pro
 AVSyc/ReadWrite.*
-
+AVSyc/.qmake.stash
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
