--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,9 @@ bld/
 AVSyc/AVSyc.pro
 AVSyc/ReadWrite.*
 AVSyc/.qmake.stash
+BaseEditor/BaseEditor.pro
+BaseEditor/.qmake.stash
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
