Beta scanner, editor fixes

--- a/AVSyc/AVSyc.vcxproj
+++ b/AVSyc/AVSyc.vcxproj
@@ -119,6 +119,8 @@
       <SubSystem>Windows</SubSystem>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
+      <EnableUAC>true</EnableUAC>
     </Link>
     <Midl>
       <DefaultCharType>Unsigned</DefaultCharType>
@@ -173,7 +175,9 @@
       <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <SubSystem>Windows</SubSystem>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
+      <UACUIAccess>false</UACUIAccess>
+      <EnableUAC>true</EnableUAC>
     </Link>
     <Midl>
       <DefaultCharType>Unsigned</DefaultCharType>
