--- a/WinService/WinService.vcxproj
+++ b/WinService/WinService.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -169,6 +169,7 @@
     <ClCompile Include="Bases.cpp" />
     <ClCompile Include="BasesLoader.cpp" />
     <ClCompile Include="Scanner.cpp" />
+    <ClCompile Include="Service.cpp" />
     <ClCompile Include="WinService.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +182,7 @@
     <ClInclude Include="Bases.h" />
     <ClInclude Include="BasesLoader.h" />
     <ClInclude Include="Scanner.h" />
+    <ClInclude Include="Service.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
