--- a/WinService/WinService.vcxproj.filters
+++ b/WinService/WinService.vcxproj.filters
@@ -41,6 +41,12 @@
     <ClCompile Include="ScanEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ScanObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ScheduleScanner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bases.h">
@@ -59,6 +65,12 @@
       <Filter>SHA256</Filter>
     </ClInclude>
     <ClInclude Include="ScanEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ScanObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ScheduleScanner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
