--- a/AVSyc/AVSyc.vcxproj.filters
+++ b/AVSyc/AVSyc.vcxproj.filters
@@ -66,6 +66,6 @@
     </QtUic>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="icon.rc" />
+    <ResourceCompile Include="AVSyc.rc" />
   </ItemGroup>
 </Project>
